--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -192,3 +192,14 @@
         }
     }
 }
+
+.caroussel-container {
+    width: 75vw;
+    margin-left: 15vw;
+    .slide-img {
+        height: 80vh;
+    }
+    .slide-img:hover {
+        cursor: pointer;
+    }
+}
