--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -54,6 +54,10 @@
   width: 100%;
 }
 
+.introduction-wrapper .introduction-btn {
+  margin-bottom: 45px;
+}
+
 .introduction-wrapper .introduction-column-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -296,16 +300,46 @@
 }
 
 .caroussel-container {
-  width: 75vw;
-  margin-left: 15vw;
+  width: 480px;
+  margin-left: 37vw;
+  margin-bottom: 40px;
 }
 
 .caroussel-container .slide-img {
   height: 80vh;
+  border-radius: 25px;
 }
 
 .caroussel-container .slide-img:hover {
   cursor: pointer;
+}
+
+.info-banner-column-wrapper .checklist-illustration {
+  width: 32vw;
+  height: 40vw;
+}
+
+.info-banner-column-wrapper .banner-text-avantage-hero {
+  font-size: 3.5vw;
+}
+
+.info-banner-column-wrapper .info-banner-avantage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  font-family: "Fredoka One", cursive;
+  color: white;
+  font-size: 2.5vw;
 }
 
 /* Slider */
