--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -47,16 +47,22 @@
             .hero-title {
                 font-size: 3.75vw;
                 color: $mainRed;
+                animation-duration: 1s;
+                animation-name: fadeInTop;
             }
             .hero-description {
                 font-size: 1.25vw;
                 color: $mainGrey;
+                animation-duration: 1s;
+                animation-name: fadeInTop;
             }
         }
         .right-column {
             .hero-banner {
                 border-radius: 35px;
                 box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
+                animation-duration: 1s;
+                animation-name: fadeIn;
             }
         }
     }
@@ -226,5 +232,25 @@
         font-family: $mainFont;
         color: white;
         font-size: 2.5vw;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInTop {
+    from {
+        transform: translateY(-10%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
     }
 }
