--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -93,17 +93,29 @@
 .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
   font-size: 3.75vw;
   color: #E84C3C;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-name: fadeInTop;
+          animation-name: fadeInTop;
 }
 
 .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
   font-size: 1.25vw;
   color: #A1A0A0;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-name: fadeInTop;
+          animation-name: fadeInTop;
 }
 
 .introduction-wrapper .introduction-column-wrapper .right-column .hero-banner {
   border-radius: 35px;
   -webkit-box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
           box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-name: fadeIn;
+          animation-name: fadeIn;
 }
 
 .introduction-wrapper .introduction-sub-wrapper {
@@ -340,6 +352,50 @@
   font-family: "Fredoka One", cursive;
   color: white;
   font-size: 2.5vw;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInTop {
+  from {
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInTop {
+  from {
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 /* Slider */
