--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -7,10 +7,10 @@
     margin-bottom: 40px;
     margin-top: 20px;
     .navbar-brand {
-        height: 150px;
-        width: 665px;
+        height: 11.2vw;
+        width: 50vw;
         align-content: flex-end;
-        margin-left: 30%;
+        margin-left: auto;
     }
     .btn-nav {
         justify-self: flex-end;
@@ -44,6 +44,7 @@
             flex-direction: column;
             font-family: $mainFont;
             gap: 50px;
+            width: 50vw;
             .hero-title {
                 font-size: 3.75vw;
                 color: $mainRed;
@@ -63,6 +64,7 @@
                 box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
                 animation-duration: 1s;
                 animation-name: fadeIn;
+                width: 50vw;
             }
         }
     }
@@ -252,5 +254,67 @@
     to {
         transform: translateY(0);
         opacity: 1;
+    }
+}
+
+@media only screen and (max-device-width: 1400px)  {
+    .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
+        font-size: 6vw;
+    }
+    .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
+        font-size: 3vw;
+    }
+    .introduction-sub-wrapper {
+        align-items: center;
+    }
+    .introduction-column-wrapper {
+        flex-direction: column;
+    }
+    .info-banner-column-wrapper {
+        padding-top: 20px;
+        flex-direction: column;
+        gap: 50px;
+        text-align: center;
+    }
+    .info-banner .info-banner-column-wrapper .banner-img {
+        margin-right: 0;
+        transform: translateY(0);
+        margin-bottom: 40px;
+    }
+    .available-city {
+        flex-direction: column-reverse;
+    }
+    .france-map-img {
+        width: 80vw;
+        height: 80vw;
+    }
+    .france-map-text {
+        font-size: 6vw;
+    }
+    .info-banner-reverse .info-banner-column-wrapper .banner-text {
+        padding-top: 20px;
+        gap: 50px;
+        text-align: center;
+        margin-left: 0;
+    }
+    .info-banner-reverse .info-banner-column-wrapper .banner-img {
+        margin-right: 0;
+        transform: translateY(0);
+        margin-bottom: 40px;
+    }
+    .delivraide-info .delivraide-info-title {
+        font-size: 5vw;
+    }
+    .info-banner-column-wrapper .banner-text-avantage-hero {
+        font-size: 5vw;
+    }
+    .info-banner-column-wrapper .checklist-illustration {
+        width: 90vw;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+    .info-banner-avantage p {
+        font-size: 4vw;
+        margin-bottom: 40px;
     }
 }
