--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -356,6 +356,119 @@
   font-size: 2.5vw;
 }
 
+.donation-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 40px;
+}
+
+.donation-wrapper .donation-column-wrapper {
+  width: 90vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 40px;
+}
+
+.donation-wrapper .donation-title {
+  font-size: 3.75vw;
+  font-family: "Fredoka One", cursive;
+  color: #4295D3;
+}
+
+.donation-wrapper .donation-description {
+  font-size: 1.25vw;
+  font-family: "Fredoka One", cursive;
+  color: #A1A0A0;
+}
+
+.donation-wrapper .donation-parapgraph {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 40px;
+}
+
+.donation-wrapper .donation-heart-illustration {
+  height: 27.5vw;
+  width: 27.5vw;
+}
+
+.conclusion {
+  background: -webkit-gradient(linear, left top, left bottom, from(#3597D3), to(#000000));
+  background: linear-gradient(180deg, #3597D3 0%, #000000 100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.conclusion .recap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 40px;
+  margin-top: 40px;
+}
+
+.conclusion .recap-hero-title {
+  font-size: 3.75vw;
+  font-family: "Fredoka One", cursive;
+  color: white;
+}
+
+.conclusion .recap-sub-title {
+  font-size: 3vw;
+  font-family: "Fredoka One", cursive;
+  color: white;
+}
+
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
@@ -752,6 +865,7 @@
   -webkit-box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0);
           box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0);
   cursor: pointer;
+  opacity: 0.9;
 }
 
 .btn-primary-blue {
@@ -777,6 +891,7 @@
   -webkit-box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0);
           box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0);
   cursor: pointer;
+  opacity: 0.9;
 }
 
 @media only screen and (max-device-width: 1400px) {
