--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -7,8 +7,8 @@
     margin-bottom: 40px;
     margin-top: 20px;
     .navbar-brand {
-        height: 11.2vw;
-        width: 50vw;
+        height: 8vw;
+        width: 30vw;
         align-content: flex-end;
         margin-left: auto;
     }
@@ -389,7 +389,7 @@
         font-size: 6vw;
     }
     .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
-        font-size: 3vw;
+        font-size: 3.75vw;
     }
     .introduction-sub-wrapper {
         align-items: center;
@@ -443,5 +443,169 @@
     .info-banner-avantage p {
         font-size: 4vw;
         margin-bottom: 40px;
+    }
+}
+
+@media only screen and (max-device-width: 600px)  {
+    .navbar-wrapper .navbar-brand {
+        width: 50vw;
+        height: 11.2vw;
+    }
+}
+
+@media only screen and (max-device-width: 400px)  {
+    .introduction-wrapper .introduction-column-wrapper .left-column {
+        gap: 20px;
+        width: 80vw;
+    }
+    .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
+        font-size: 7vw;
+    }
+    .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
+        font-size: 4vw;
+    }
+    .introduction-wrapper .introduction-column-wrapper {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .introduction-wrapper .introduction-column-wrapper .right-column .hero-banner {
+        width: 80vw;
+    }
+    .info-banner .info-banner-column-wrapper .banner-text {
+        font-size: 8vw;
+    }
+    .info-banner .info-banner-column-wrapper .banner-img {
+        width: 333px;
+        height: 333px;
+    }
+    .info-banner .info-banner-column-wrapper {
+        width: 95vw;
+    }
+    .introduction-sub-wrapper {
+        align-items: center;
+    }
+    .introduction-column-wrapper {
+        flex-direction: column;
+    }
+    .info-banner-column-wrapper {
+        padding-top: 20px;
+        flex-direction: column;
+        gap: 50px;
+        text-align: center;
+    }
+    .info-banner .info-banner-column-wrapper .banner-img {
+        margin-right: 0;
+        transform: translateY(0);
+        margin-bottom: 40px;
+    }
+    .available-city {
+        flex-direction: column-reverse;
+    }
+    .france-map-img {
+        width: 95vw;
+        height: 95vw;
+    }
+    .available-city .france-map-text {
+        font-size: 8vw;
+        text-align: center;
+    }
+    .info-banner-reverse .info-banner-column-wrapper .banner-text {
+        font-size: 8vw;
+    }
+    .info-banner-reverse {
+        border-radius: 0 0 150px 150px;
+    }
+    .info-banner {
+        border-radius: 0 0 150px 150px;
+    }
+    .info-banner-reverse .info-banner-column-wrapper .banner-img {
+        margin-right: 0;
+        transform: translateY(0);
+        margin-bottom: 40px;
+        width: 333px;
+        height: 333px;
+    }
+    .delivraide-info .delivraide-info-title {
+        font-size: 8.5vw;
+    }
+    .delivraide-info .delivraide-info-stat-delivery-man .delivraide-info-stat-stroke {
+        font-size: 15vw;
+    }
+    .delivraide-info .delivraide-info-stat-availaible-city .delivraide-info-stat-stroke {
+        font-size: 15vw;
+    }
+    .delivraide-info .delivraide-info-stat-total-delivery .delivraide-info-stat-stroke {
+        font-size: 15vw;
+    }
+    .delivraide-info .delivraide-info-title-stroke {
+        -webkit-text-stroke: 2px #4295D3;
+    }
+    .delivraide-info .delivraide-info-stat-delivery-man {
+        font-size: 7vw;
+    }
+    .delivraide-info .delivraide-info-stat-availaible-city {
+        font-size: 7vw;
+    }
+    .delivraide-info .delivraide-info-stat-total-delivery {
+        font-size: 7vw;
+    }
+    .info-banner-column-wrapper .banner-text-avantage-hero {
+        font-size: 9vw;
+    }
+    .caroussel-container {
+        width: 90vw;
+        margin-left: 5%;
+    }
+    .info-banner {
+        border-radius: 150px 150px 0 0;
+    }
+    .info-banner-column-wrapper .checklist-illustration {
+        flex: 1;
+    }
+    .info-banner-column-wrapper .info-banner-avantage {
+        margin-left: 20px;
+        align-items: flex-start;
+        align-items: center;
+    }
+    .info-banner-avantage p {
+        font-size: 5vw;
+        margin-bottom: 40px;
+    }
+    .donation-wrapper .donation-title {
+        font-size: 7vw;
+    }
+    .donation-wrapper .donation-parapgraph {
+        gap: 20px;
+    }
+    .donation-wrapper .donation-description {
+        font-size: 5vw;
+    }
+    .donation-wrapper .donation-heart-illustration {
+        width: 55vw;
+        height: 55vw;
+    }
+    .donation-wrapper .donation-column-wrapper {
+        flex-direction: column;
+    }
+    .conclusion .recap-hero-title {
+        font-size: 8vw;
+    }
+    .conclusion .recap-sub-title {
+        font-size: 8vw;
+    }
+    .conclusion footer .footer-column-wrapper .footer-left-column .footer-contact-section img {
+        width: 35px;
+    }
+    .conclusion footer .footer-column-wrapper .footer-left-column .footer-contact-section .contact-logo {
+        gap: 15px;
+    }
+    .conclusion footer .footer-column-wrapper .footer-contact-description {
+        font-size: 3.75vw;
+    }
+    .conclusion footer .footer-column-wrapper .footer-contact-title {
+        font-size: 8vw;
+    }
+    .conclusion footer .footer-copyright {
+        font-size: 3vw;
     }
 }
