--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -22,8 +22,8 @@
 }
 
 .navbar-wrapper .navbar-brand {
-  height: 11.2vw;
-  width: 50vw;
+  height: 8vw;
+  width: 30vw;
   -ms-flex-line-pack: end;
       align-content: flex-end;
   margin-left: auto;
@@ -614,7 +614,7 @@
     font-size: 6vw;
   }
   .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
-    font-size: 3vw;
+    font-size: 3.75vw;
   }
   .introduction-sub-wrapper {
     -webkit-box-align: center;
@@ -681,6 +681,192 @@
   .info-banner-avantage p {
     font-size: 4vw;
     margin-bottom: 40px;
+  }
+}
+
+@media only screen and (max-device-width: 600px) {
+  .navbar-wrapper .navbar-brand {
+    width: 50vw;
+    height: 11.2vw;
+  }
+}
+
+@media only screen and (max-device-width: 400px) {
+  .introduction-wrapper .introduction-column-wrapper .left-column {
+    gap: 20px;
+    width: 80vw;
+  }
+  .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
+    font-size: 7vw;
+  }
+  .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
+    font-size: 4vw;
+  }
+  .introduction-wrapper .introduction-column-wrapper {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  .introduction-wrapper .introduction-column-wrapper .right-column .hero-banner {
+    width: 80vw;
+  }
+  .info-banner .info-banner-column-wrapper .banner-text {
+    font-size: 8vw;
+  }
+  .info-banner .info-banner-column-wrapper .banner-img {
+    width: 333px;
+    height: 333px;
+  }
+  .info-banner .info-banner-column-wrapper {
+    width: 95vw;
+  }
+  .introduction-sub-wrapper {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .introduction-column-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .info-banner-column-wrapper {
+    padding-top: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+    text-align: center;
+  }
+  .info-banner .info-banner-column-wrapper .banner-img {
+    margin-right: 0;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    margin-bottom: 40px;
+  }
+  .available-city {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .france-map-img {
+    width: 95vw;
+    height: 95vw;
+  }
+  .available-city .france-map-text {
+    font-size: 8vw;
+    text-align: center;
+  }
+  .info-banner-reverse .info-banner-column-wrapper .banner-text {
+    font-size: 8vw;
+  }
+  .info-banner-reverse {
+    border-radius: 0 0 150px 150px;
+  }
+  .info-banner {
+    border-radius: 0 0 150px 150px;
+  }
+  .info-banner-reverse .info-banner-column-wrapper .banner-img {
+    margin-right: 0;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    margin-bottom: 40px;
+    width: 333px;
+    height: 333px;
+  }
+  .delivraide-info .delivraide-info-title {
+    font-size: 8.5vw;
+  }
+  .delivraide-info .delivraide-info-stat-delivery-man .delivraide-info-stat-stroke {
+    font-size: 15vw;
+  }
+  .delivraide-info .delivraide-info-stat-availaible-city .delivraide-info-stat-stroke {
+    font-size: 15vw;
+  }
+  .delivraide-info .delivraide-info-stat-total-delivery .delivraide-info-stat-stroke {
+    font-size: 15vw;
+  }
+  .delivraide-info .delivraide-info-title-stroke {
+    -webkit-text-stroke: 2px #4295D3;
+  }
+  .delivraide-info .delivraide-info-stat-delivery-man {
+    font-size: 7vw;
+  }
+  .delivraide-info .delivraide-info-stat-availaible-city {
+    font-size: 7vw;
+  }
+  .delivraide-info .delivraide-info-stat-total-delivery {
+    font-size: 7vw;
+  }
+  .info-banner-column-wrapper .banner-text-avantage-hero {
+    font-size: 9vw;
+  }
+  .caroussel-container {
+    width: 90vw;
+    margin-left: 5%;
+  }
+  .info-banner {
+    border-radius: 150px 150px 0 0;
+  }
+  .info-banner-column-wrapper .checklist-illustration {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .info-banner-column-wrapper .info-banner-avantage {
+    margin-left: 20px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .info-banner-avantage p {
+    font-size: 5vw;
+    margin-bottom: 40px;
+  }
+  .donation-wrapper .donation-title {
+    font-size: 7vw;
+  }
+  .donation-wrapper .donation-parapgraph {
+    gap: 20px;
+  }
+  .donation-wrapper .donation-description {
+    font-size: 5vw;
+  }
+  .donation-wrapper .donation-heart-illustration {
+    width: 55vw;
+    height: 55vw;
+  }
+  .donation-wrapper .donation-column-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .conclusion .recap-hero-title {
+    font-size: 8vw;
+  }
+  .conclusion .recap-sub-title {
+    font-size: 8vw;
+  }
+  .conclusion footer .footer-column-wrapper .footer-left-column .footer-contact-section img {
+    width: 35px;
+  }
+  .conclusion footer .footer-column-wrapper .footer-left-column .footer-contact-section .contact-logo {
+    gap: 15px;
+  }
+  .conclusion footer .footer-column-wrapper .footer-contact-description {
+    font-size: 3.75vw;
+  }
+  .conclusion footer .footer-column-wrapper .footer-contact-title {
+    font-size: 8vw;
+  }
+  .conclusion footer .footer-copyright {
+    font-size: 3vw;
   }
 }
 
@@ -996,6 +1182,24 @@
   }
   .btn-primary-blue {
     font-size: 3.5vw;
+  }
+}
+
+@media only screen and (max-device-width: 400px) {
+  .btn-primary-red {
+    font-size: 5vw;
+  }
+  .btn-primary-blue {
+    font-size: 5vw;
+  }
+  .introduction-wrapper .introduction-btn {
+    margin-bottom: 20px;
+  }
+  .navbar-wrapper .btn-nav {
+    display: none;
+  }
+  .navbar-wrapper .navbar-brand {
+    margin-left: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
