--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -48,22 +48,16 @@
             .hero-title {
                 font-size: 3.75vw;
                 color: $mainRed;
-                animation-duration: 1s;
-                animation-name: fadeInTop;
             }
             .hero-description {
                 font-size: 1.25vw;
                 color: $mainGrey;
-                animation-duration: 1s;
-                animation-name: fadeInTop;
             }
         }
         .right-column {
             .hero-banner {
                 border-radius: 35px;
                 box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
-                animation-duration: 1s;
-                animation-name: fadeIn;
                 width: 50vw;
             }
         }
@@ -366,28 +360,6 @@
     }
 }
 
-
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeInTop {
-    from {
-        transform: translateY(-10%);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
 @media only screen and (max-device-width: 1400px)  {
     .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
         font-size: 6vw;
@@ -561,7 +533,7 @@
         margin-left: 5%;
     }
     .info-banner {
-        border-radius: 150px 150px 0 0;
+        border-radius: 0 0 150px 150px;
     }
     .info-banner-column-wrapper .checklist-illustration {
         flex: 1;
