--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -6,6 +6,11 @@
           box-sizing: border-box;
 }
 
+body {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
 .navbar-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -94,29 +99,17 @@
 .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
   font-size: 3.75vw;
   color: #E84C3C;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-name: fadeInTop;
-          animation-name: fadeInTop;
 }
 
 .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
   font-size: 1.25vw;
   color: #A1A0A0;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-name: fadeInTop;
-          animation-name: fadeInTop;
 }
 
 .introduction-wrapper .introduction-column-wrapper .right-column .hero-banner {
   border-radius: 35px;
   -webkit-box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
           box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-name: fadeIn;
-          animation-name: fadeIn;
   width: 50vw;
 }
 
@@ -576,50 +569,6 @@
   width: 90vw;
 }
 
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeInTop {
-  from {
-    -webkit-transform: translateY(-10%);
-            transform: translateY(-10%);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeInTop {
-  from {
-    -webkit-transform: translateY(-10%);
-            transform: translateY(-10%);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    opacity: 1;
-  }
-}
-
 @media only screen and (max-device-width: 1400px) {
   .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
     font-size: 6vw;
@@ -819,7 +768,7 @@
     margin-left: 5%;
   }
   .info-banner {
-    border-radius: 150px 150px 0 0;
+    border-radius: 0 0 150px 150px;
   }
   .info-banner-column-wrapper .checklist-illustration {
     -webkit-box-flex: 1;
