Added charte + policy + kit form + routing

--- a/delivr-aide-react-website-1.0/src/styles/style.scss
+++ b/delivr-aide-react-website-1.0/src/styles/style.scss
@@ -13,6 +13,9 @@ body {
 @import 'app';
 @import 'slick';
 @import 'slickTheme';
+@import 'politique';
+@import 'charte';
+@import 'addKit';
 
 .btn-primary-red {
     all: unset;
