--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1086,6 +1086,433 @@ body {
   opacity: 0.75;
 }
 
+.p-confidentialité {
+  width: 85%;
+  text-align: justify;
+  color: #000;
+  font-size: 15px;
+}
+
+.div-li-politique {
+  text-align: justify;
+  width: 85%;
+  font-size: 15px;
+}
+
+.about-section-validation {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 5%;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.about-section-validation {
+  width: 90vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 24px;
+}
+
+.p-confidentialité {
+  width: 85%;
+  text-align: justify;
+  color: #000;
+  font-size: 15px;
+}
+
+.div-li-politique {
+  text-align: justify;
+  width: 85%;
+  font-size: 15px;
+}
+
+.about-section-validation {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 5%;
+}
+
+.italic {
+  font-style: italic;
+}
+
+:root {
+  --main-font: 'Fredoka One', cursive;
+  --main-font-color: white;
+}
+
+.main-wrapper-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit {
+  background: -webkit-gradient(linear, left top, left bottom, from(#FC3A2F), to(#0098D9));
+  background: linear-gradient(180deg, #FC3A2F 0%, #0098D9 100%);
+  -webkit-box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+          box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 10vh;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 40px;
+  gap: 40px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .add-kit-hero-title {
+  margin-top: 10vh;
+  color: var(--main-font-color);
+  font-family: var(--main-font);
+  font-size: 3vw;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 40px;
+  gap: 40px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-firstname-lastname {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  grid-gap: 40px;
+  gap: 40px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-city-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  grid-gap: 40px;
+  gap: 40px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-first-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 25px;
+  gap: 25px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-city-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 25px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-zip-code {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 25px;
+  gap: 25px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 25px;
+  gap: 25px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-email {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 40px;
+  gap: 40px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-account-connexion {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  grid-gap: 40px;
+  gap: 40px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit {
+  background: transparent;
+  all: unset;
+  border-radius: 25px;
+  font-family: var(--main-font);
+  font-size: 2vw;
+  padding: 15px;
+  background: transparent;
+  border: 4px solid transparent;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+          box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+  border: 4px solid var(--main-font-color);
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  color: var(--main-font-color);
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit:hover {
+  background: var(--main-font-color);
+  color: black;
+  cursor: pointer;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .politique-div {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  gap: 20px;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper #confidentialité {
+  all: unset;
+  padding: 20px;
+  border-radius: 50%;
+  background: white;
+  border: 4px solid transparent;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper #confidentialité:hover {
+  cursor: pointer;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper #confidentialité:checked {
+  border: 4px solid white;
+  background: #E84C3C;
+}
+
+.form-last-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 25px;
+  gap: 25px;
+}
+
+.form-wrapper label {
+  font-family: var(--main-font);
+  color: var(--main-font-color);
+  font-size: 2vw;
+}
+
+.form-wrapper input:not(.form-submit) {
+  all: unset;
+  border: 4px solid var(--main-font-color);
+  border-radius: 25px;
+  font-family: var(--main-font);
+  color: var(--main-font-color);
+  font-size: 2vw;
+  padding: 15px;
+  background: var(--main-font-color);
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  color: black;
+  -webkit-box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+          box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+}
+
+.form-wrapper input:focus {
+  outline: none;
+  background: transparent;
+  color: var(--main-font-color);
+  border: 4px solid var(--main-font-color);
+}
+
+@media only screen and (max-width: 1000px) {
+  .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .add-kit-hero-title {
+    font-size: 8vw;
+  }
+  .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper label {
+    font-size: 7vw;
+  }
+  .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-firstname-lastname {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-city-info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-account-connexion {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .form-wrapper input:not(.form-submit) {
+    font-size: 6vw;
+  }
+  .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit {
+    font-size: 8vw;
+  }
+}
+
 .btn-primary-red {
   all: unset;
   border-radius: 25px;
