--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1513,6 +1513,48 @@ body {
   }
 }
 
+.not-found-navbar {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 25px;
+  background: white;
+  -webkit-box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
+          box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
+}
+
+.not-found-text {
+  font-family: "Fredoka One", cursive;
+  font-size: 2em;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.not-found-text span {
+  font-size: 1em;
+}
+
+.not-found-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #4295D3;
+}
+
 .btn-primary-red {
   all: unset;
   border-radius: 25px;
