Added yovann section

--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -360,6 +360,11 @@
     }
 }
 
+.yovann {
+    width: 100%;
+    height: 100%;
+}
+
 @media only screen and (max-device-width: 1400px)  {
     .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
         font-size: 6vw;
