--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -569,6 +569,11 @@ body {
   width: 90vw;
 }
 
+.yovann {
+  width: 100%;
+  height: 100%;
+}
+
 @media only screen and (max-device-width: 1400px) {
   .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
     font-size: 6vw;
@@ -1553,6 +1558,38 @@ body {
   width: 100%;
   height: 100%;
   background: #4295D3;
+}
+
+.contact-navbar {
+  top: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 25px;
+  background: white;
+  -webkit-box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
+          box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
+}
+
+.contact-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #4295D3;
+}
+
+.contact-page-contact {
+  font-family: "Fredoka One", cursive;
+  font-size: 2em;
+  color: white;
+  text-align: center;
 }
 
 .btn-primary-red {
