Added style on charte and politique + added email.js to send kit request until the app is released + button for donator and becoming delivery man now redirect to both google forms

--- a/delivr-aide-react-website-1.0/src/styles/_contact.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_contact.scss
@@ -1,4 +1,4 @@
-.contact-navbar {
+.sub-section-navbar {
     top: 0;
     width: 100%;
     display: flex;
@@ -10,10 +10,10 @@
 }
 
 .contact-bg {
+    background: $mainBlue;
     position: absolute;
     width: 100%;
     height: 100%;
-    background: $mainBlue;
 }
 
 .contact-page-contact {
