--- a/delivr-aide-react-website-1.0/src/styles/_charte.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_charte.scss
@@ -1,19 +1,38 @@
 .p-confidentialité {
     width: 85%;
-    text-align: justify;
-    color: #000;
-    font-size: 15px;
+    color: white;
+    font-size: 1.25em;
+    font-family: $mainFont;
+}
+
+.sub-section-bg {
+    width: 100%;
+    height: 100%;
+    background: $mainBlue;
 }
 
 .div-li-politique {
-    text-align: justify;
     width: 85%;
     font-size: 15px;
 }
 
 .about-section-validation {
+    margin-left: 25px;
+    justify-content: center;
     align-items: center;
     margin-top: 5%;
+    gap: 40px;
+    h3 {
+        font-family: $mainFont;
+        text-align: center;
+        color: white;
+        font-size: 1.25em;
+    }
+    .div-li {
+        font-family: $mainFont;
+        color: white;
+        font-size: 1em;
+    }
 }
 
 .italic {
