--- a/delivr-aide-react-website-1.0/src/styles/_politique.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_politique.scss
@@ -1,12 +1,10 @@
 .p-confidentialité {
     width: 85%;
-    text-align: justify;
     color: #000;
     font-size: 15px;
 }
 
 .div-li-politique {
-    text-align: justify;
     width: 85%;
     font-size: 15px;
 }
@@ -27,4 +25,10 @@
     justify-content: center;
     flex-direction: column;
     font-size: 24px;
+}
+
+.div-li-politique {
+    font-family: $mainFont;
+        color: white;
+        font-size: 1.5em;
 }
