--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1093,13 +1093,11 @@ body {
 
 .p-confidentialité {
   width: 85%;
-  text-align: justify;
   color: #000;
   font-size: 15px;
 }
 
 .div-li-politique {
-  text-align: justify;
   width: 85%;
   font-size: 15px;
 }
@@ -1133,24 +1131,53 @@ body {
   font-size: 24px;
 }
 
+.div-li-politique {
+  font-family: "Fredoka One", cursive;
+  color: white;
+  font-size: 1.5em;
+}
+
 .p-confidentialité {
   width: 85%;
-  text-align: justify;
-  color: #000;
-  font-size: 15px;
+  color: white;
+  font-size: 1.25em;
+  font-family: "Fredoka One", cursive;
+}
+
+.sub-section-bg {
+  width: 100%;
+  height: 100%;
+  background: #4295D3;
 }
 
 .div-li-politique {
-  text-align: justify;
   width: 85%;
   font-size: 15px;
 }
 
 .about-section-validation {
+  margin-left: 25px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   margin-top: 5%;
+  gap: 40px;
+}
+
+.about-section-validation h3 {
+  font-family: "Fredoka One", cursive;
+  text-align: center;
+  color: white;
+  font-size: 1.25em;
+}
+
+.about-section-validation .div-li {
+  font-family: "Fredoka One", cursive;
+  color: white;
+  font-size: 1em;
 }
 
 .italic {
@@ -1518,25 +1545,6 @@ body {
   }
 }
 
-.not-found-navbar {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-top: 25px;
-  background: white;
-  -webkit-box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
-          box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
-}
-
 .not-found-text {
   font-family: "Fredoka One", cursive;
   font-size: 2em;
@@ -1560,7 +1568,7 @@ body {
   background: #4295D3;
 }
 
-.contact-navbar {
+.sub-section-navbar {
   top: 0;
   width: 100%;
   display: -webkit-box;
@@ -1579,10 +1587,10 @@ body {
 }
 
 .contact-bg {
+  background: #4295D3;
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #4295D3;
 }
 
 .contact-page-contact {
